# TradeLens-AI

./: .gitignore  README.md  pyproject.toml
output/: LLY_analysis.md
output/Frontend/: example.txt
src/business_intelligence_agent/: app.py  crew.py  data_fetcher.py  ticker_fetcher.py  visualization.py  yfinance_cookie_patch.py
src/business_intelligence_agent/config/: agents.yaml  tasks.yaml
